# simple-WebApp

./: Cargo.toml  README.md  index.html
src/: main.rs
src/app/: caleder.css  cloundm.css  cloundm.rs  daytree.css  daytree.rs  dt_classes.rs  dt_now.css  dt_now.rs  main_page.rs  mod.rs  quick_note.css  quick_note.rs  root.css  router.rs  styles.css  url  userdata.rs
src/util/: button.css  mod.rs  text_input.css  text_input.rs
