[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-scroll-area = "0.4.0"
bounce = "0.3.0"
yew-hooks = "0.1.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11.12", features = ["json"] }
yew-router = "0.16"
gloo = "0.8.0"
stylist = { version = "0.10", features = ["yew"] }
web-sys = { version = "0.3.60", features = ["HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
now = "0.1.3"
chrono = "0.4.23"
